--- a/about.html
+++ b/about.html
@@ -62,11 +62,17 @@
         </div>
     </nav>
     <div id="background-dark" style="margin-top:55px;">
+        <div class="jumbotron">
+            <p class="lead">Our cause, our belief, and our mission</p>
+            <h1 class="display-4">About Brainwatch</h1>
+            <hr class="my-4">
+            <p>Brainwatch is koooooooool</p>
+        </div>
     </div>
     <div id="background-light">
         <div class="container">
             <div class="row">
-                <h1>What is our mission?</h1>
+                <h1>What is our story?</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
                     Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
