--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
+        crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 
@@ -61,27 +64,40 @@
         -->
         </div>
     </nav>
-    <div id="background-dark">
-        <div class="container-fluid" style="margin-top:55px;">
-            <div class="jumbotron">
-                <h1 class="display-4">We're Brainwatch</h1>
-                <p class="lead">Brainwatch is aiming to detect and record minor concussions.</p>
-                <hr class="my-4">
-                <p>We are using ultra low-power LoRaWAN to build a large-scale and long-distance IoT safety system.</p>
-                <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
+    <div id="background-dark" style="margin-top:55px;">
+        <div class="jumbotron">
+            <h1 class="display-4">We're Brainwatch</h1>
+            <p class="lead">Brainwatch is aiming to detect and record minor concussions.</p>
+            <hr class="my-4">
+            <p>We are using ultra low-power LoRaWAN to build a large-scale and long-distance IoT safety system.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
+            </p>
+        </div>
+
+        <div class="row" style="padding-bottom:50px;">
+            <div class="col-md-4 text-center">
+                <h2 class="my-4">
+                    <i class="fa fa-wifi"></i>
+                </h2>
+                <h5 class="my-4">Long Range</h5>
+                <p class="my-4">Brainwatch system utilizes LoRaWan for low bandwidth, long range (up to 7 mi.), and low power communication.</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <h2 class="my-4">
+                    <i class="fa fa-database"></i>
+                </h2>
+                <h5 class="my-4">Analyzable data</h5>
+                <p class="my-4">Utilizing IoT, data is immediately available on the Internet, and could be analyzed in real time, or stored
+                    individually.
                 </p>
             </div>
-            <div class="row" style="padding-bottom:50px;">
-                <div class="col-md-4 text-center">
-                    I don't know what to write here yet.
-                </div>
-                <div class="col-md-4 text-center">
-                    I don't know what to write here yet.
-                </div>
-                <div class="col-md-4 text-center">
-                    I don't know what to write here yet.
-                </div>
+            <div class="col-md-4 text-center">
+                <h2 class="my-4">
+                    <i class="fas fa-arrows-alt"></i>
+                </h2>
+                <h5 class="my-4">Extendable Use Case</h5>
+                <p class="my-4">Brainwatch's system could be used not only for football, but also for skiing, ice skating, or ice hockey.</p>
             </div>
         </div>
     </div>
