--- a/team.html
+++ b/team.html
@@ -38,8 +38,8 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item active">
-                        <a class="nav-link" href="team.html">Team</a>
-                    </li>
+                    <a class="nav-link" href="team.html">Team</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
@@ -62,81 +62,30 @@
         </div>
     </nav>
     <div id="background-dark" style="margin-top:55px;">
+        <div class="jumbotron">
+            <p class="lead">About us</p>
+            <h1 class="display-4">The Team</h1>
+
+            <hr class="my-4">
+            <p>We started this project since 2017.</p>
+        </div>
     </div>
     <div id="background-light">
         <div class="container">
             <div class="row">
                 <h1>Team member</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
-                    Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
-                    tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.
-                </p>
-                <p>
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero.
-                    Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
-                    Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus
-                    risus, iaculis vel, suscipit quis, luctus non, massa.
-                </p>
-                <p>
-                    Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in,
-                    nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing
-                    diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat
-                    mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam.
-                </p>
-                <p>
-                    Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
-                    metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante
-                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent
-                    blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede
-                    facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt
-                    malesuada tellus.
-                </p>
-                <p>
-                    Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer
-                    lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque
-                    nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante.
-                    Nulla quam. Aenean laoreet.
-                </p>
-                <p>
-                    Vestibulum nisi lectus, commodo ac, facilisis ac, ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet
-                    eget, justo. Sed pretium blandit orci. Ut eu diam at pede suscipit sodales. Aenean lectus elit, fermentum
-                    non, convallis id, sagittis at, neque. Nullam mauris orci, aliquet et, iaculis et, viverra vitae, ligula.
-                    Nulla ut felis in purus aliquam imperdiet. Maecenas aliquet mollis lectus. Vivamus consectetuer risus
-                    et tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-                    Sed cursus ante dapibus diam.
-                </p>
-                <p>
-                    Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
-                    porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent
-                    per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia
-                    nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
-                </p>
-                <p>
-                    Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
-                    suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus
-                    metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent
-                    taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia,
-                    urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi.
-                    Ut fringilla. Suspendisse potenti.
-                </p>
-                <p>
-                    Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna
-                    luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra
-                    auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus
-                    orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed
-                    non quam.
-                </p>
-                <p>
-                    In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec,
-                    blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur
-                    sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin
-                    massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis
-                    tristique, dignissim in, ultrices sit amet, augue.
 
-
-                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-4 member-frame">
+                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
+                </div>
+                <div class="col-md-4 member-frame">
+                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
+                </div>
+                <div class="col-md-4 member-frame">
+                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
+                </div>
             </div>
         </div>
     </div>
