--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <p class="lead">Our cause, our belief, and our mission</p>
             <h1 class="display-4">About Brainwatch</h1>
             <hr class="my-4">
-            <p>Brainwatch is koooooooool</p>
+            <p>To train without holding back, and to win without injury</p>
         </div>
     </div>
     <div id="background-light">
