changed team desc

--- a/index.html
+++ b/index.html
@@ -66,13 +66,20 @@
     </nav>
     <div id="background-dark" style="margin-top:55px;">
         <div class="jumbotron">
-            <h1 class="display-4">We're Brainwatch</h1>
-            <p class="lead">Brainwatch is aiming to detect and record minor concussions.</p>
-            <hr class="my-4">
-            <p>We are using ultra low-power LoRaWAN to build a large-scale and long-distance IoT safety system.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
-            </p>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h1 class="display-2">We are Brainwatch</h1>
+                    <p class="lead">Brainwatch is aiming to detect and record minor concussions.</p>
+                    <hr class="my-2">
+                    <p>We are using ultra low-power LoRaWAN to build a large-scale and long-distance IoT safety system.</p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
+                    </p>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
         </div>
 
         <div class="row" style="padding-bottom:50px;">
