--- a/team.html
+++ b/team.html
@@ -67,26 +67,47 @@
             <h1 class="display-4">The Team</h1>
 
             <hr class="my-4">
-            <p>We started this project since 2017.</p>
+            <p>We started this project since 2017. And ...</p>
         </div>
     </div>
     <div id="background-light">
         <div class="container">
             <div class="row">
-                <h1>Team member</h1>
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <div class="row" style="margin-top:50px;">
+                        <div class="col-md-6 member-frame">
+                            <img src="https://media.mnn.com/assets/images/2017/06/eastern-chipmunk-dc.jpg" class="img-fluid rounded member-pic">
+                            <h2 class="member-name">Thomas Han</h2>
+                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                                to display.</p>
+                        </div>
+                        <div class="col-md-6 member-frame">
+                            <img src="https://media.mnn.com/assets/images/2014/12/gray-squirrel-uc-berkeley.jpg" class="img-fluid rounded member-pic">
+                            <h2 class="member-name">Paul Ruales</h2>
+                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                                to display.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 member-frame">
+                            <img src="https://media.mnn.com/assets/images/2017/06/squirrel-battery-park-new-york.jpg" class="img-fluid rounded member-pic">
+                            <h2 class="member-name">Shahaed Hasan</h2>
+                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                                to display.</p>
+                        </div>
+                        <div class="col-md-6 member-frame">
+                            <img src="https://media.mnn.com/assets/images/2017/06/indian-giant-squirrel.jpg" class="img-fluid rounded member-pic">
+                            <h2 class="member-name">Paul Taufalele</h2>
+                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                                to display.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
 
             </div>
-            <div class="row">
-                <div class="col-md-4 member-frame">
-                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
-                </div>
-                <div class="col-md-4 member-frame">
-                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
-                </div>
-                <div class="col-md-4 member-frame">
-                    <image src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg" width="250" height="250"></image>
-                </div>
-            </div>
+
         </div>
     </div>
     <script src="js/index.js"></script>
