changed urls for all the images

--- a/team.html
+++ b/team.html
@@ -77,13 +77,13 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-top:50px;">
                         <div class="col-md-6 member-frame">
-                            <img src="https://media.mnn.com/assets/images/2017/06/eastern-chipmunk-dc.jpg" class="img-fluid rounded member-pic">
+                            <img src="res/image1.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Thomas Han</h2>
                             <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                         <div class="col-md-6 member-frame">
-                            <img src="https://media.mnn.com/assets/images/2014/12/gray-squirrel-uc-berkeley.jpg" class="img-fluid rounded member-pic">
+                            <img src="res/image2.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Paul Ruales</h2>
                             <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
                                 to display.</p>
@@ -91,13 +91,13 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 member-frame">
-                            <img src="https://media.mnn.com/assets/images/2017/06/squirrel-battery-park-new-york.jpg" class="img-fluid rounded member-pic">
+                            <img src="res/image3.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Shahaed Hasan</h2>
                             <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                         <div class="col-md-6 member-frame">
-                            <img src="https://media.mnn.com/assets/images/2017/06/indian-giant-squirrel.jpg" class="img-fluid rounded member-pic">
+                            <img src="res/image4.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Paul Taufalele</h2>
                             <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
                                 to display.</p>
