--- a/index.html
+++ b/index.html
@@ -192,37 +192,17 @@
         <!--Footer Links-->
         <div class="container text-center text-md-left">
             <div class="row">
+                <div class="col-md-3"></div>
 
                 <!--First column-->
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Brainwatch</h5>
-                    <p>Made with limited time, however with the best coffee one can find in Arizona (Cartel, Tempe, AZ).</p>
+                    <p>Front-end made with limited time, however with the best coffee one can find in Arizona (Cartel, Tempe,
+                        AZ).
+                    </p>
                 </div>
                 <!--/.First column-->
-
-                <hr class="clearfix w-100 d-md-none">
-
-                <!--Second column-->
-                <div class="col-md-2 mx-auto">
-                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Links</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 4</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--/.Second column-->
-
-                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-3"></div>
             </div>
         </div>
         <!--/.Footer Links-->
@@ -233,28 +213,18 @@
         <div class="text-center">
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm btn-fb mx-1">
-                        <i class="fa fa-facebook"> </i>
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm btn-tw mx-1">
-                        <i class="fa fa-twitter"> </i>
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm btn-gplus mx-1">
-                        <i class="fa fa-google-plus"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-sm btn-li mx-1">
-                        <i class="fa fa-linkedin"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-sm btn-dribbble mx-1">
-                        <i class="fa fa-dribbble"> </i>
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
                     </a>
                 </li>
             </ul>
