--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-4 footah">
 
         <!--Footer Links-->
         <div class="container text-center text-md-left">
@@ -207,7 +207,6 @@
         </div>
         <!--/.Footer Links-->
 
-        <hr>
 
         <!--Social buttons-->
         <div class="text-center">
