--- a/team.html
+++ b/team.html
@@ -110,6 +110,59 @@
 
         </div>
     </div>
+    <!--Footer-->
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-4 footah">
+
+        <!--Footer Links-->
+        <div class="container text-center text-md-left">
+            <div class="row">
+                <div class="col-md-3"></div>
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Brainwatch</h5>
+                    <p>Front-end made with limited time, however with the best coffee one can find in Arizona (Cartel, Tempe,
+                        AZ).
+                    </p>
+                </div>
+                <!--/.First column-->
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+
+        <!--Social buttons-->
+        <div class="text-center">
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm mx-1" href="#">
+                        <i class="fa fa-wifi"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!--/.Social buttons-->
+
+        <!--Copyright-->
+        <div class="footer-copyright py-3 text-center">
+            © 2018 Copyright:
+            <a href="https://github.com/jiyuhan"> Thomas Han </a>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
     <script src="js/index.js"></script>
 </body>
 
