commiting without commiting resource

--- a/about.html
+++ b/about.html
@@ -41,27 +41,15 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="demo.html">Demo</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="team.html">Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
-            <!--
-            <div class="my-2 my-lg-0">
-                <ul>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                </ul>
-            </div>
-        -->
         </div>
     </nav>
     <div id="background-dark" style="margin-top:55px;">
