--- a/team.html
+++ b/team.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="demo.html">Demo</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="team.html">Team</a>
                 </li>
@@ -47,21 +50,6 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
-            <!--
-            <div class="my-2 my-lg-0">
-                <ul>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                </ul>
-            </div>
-        -->
         </div>
     </nav>
     <div id="background-dark" style="margin-top:55px;">
@@ -82,13 +70,13 @@
                         <div class="col-md-6 member-frame">
                             <img src="res/image1.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Thomas Han</h2>
-                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                            <p class="member-desc">I don't really know anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                         <div class="col-md-6 member-frame">
                             <img src="res/image2.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Paul Ruales</h2>
-                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                            <p class="member-desc">I don't really know anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                     </div>
@@ -96,13 +84,13 @@
                         <div class="col-md-6 member-frame">
                             <img src="res/image3.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Shahaed Hasan</h2>
-                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                            <p class="member-desc">I don't really know anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                         <div class="col-md-6 member-frame">
                             <img src="res/image4.jpg" class="img-fluid rounded member-pic">
                             <h2 class="member-name">Paul Taufalele</h2>
-                            <p class="member-desc">I don't really konw anything, but I am just typing my description here so there is something
+                            <p class="member-desc">I don't really know anything, but I am just typing my description here so there is something
                                 to display.</p>
                         </div>
                     </div>
