loading some icons and changed background for about.html

--- a/demo.html
+++ b/demo.html
@@ -12,10 +12,6 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 
@@ -62,32 +58,33 @@
     </div>
     <div id="background-light">
         <div class="container">
+            <h1>Hardware components we have assembled</h1>
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 text-center">
-                    <h1>Hardware components we have assembled</h1>
-                    <div class="demo-frame">
+                <div class="col-md-8">
+
+                    <div class="demo-frame text-center">
                         <img src="res/proto1.jpg" class="img-fluid rounded demo-pic">
                         <h2 class="demo-name">Prototype with Arduino No. 1</h2>
                         <p class="demo-desc">This prototype uses an Arduino Mega 2560 that powers and controlls the LoRa transmitter to send the
                             location data and concussion data.
                         </p>
                     </div>
-                    <div class="demo-frame">
+                    <div class="demo-frame text-center">
                         <img src="res/gyro.jpg" class="img-fluid rounded demo-pic">
                         <h2 class="demo-name">The gyroscope we are using</h2>
                         <p class="demo-desc">MPU-6050 gyroscope has six degrees of freedom, and we can implement Kalman filter on chip, which
                             will give us very stable and accurate data.
                         </p>
                     </div>
-                    <div class="demo-frame">
+                    <div class="demo-frame text-center">
                         <img src="res/lora_chip.jpg" class="img-fluid rounded demo-pic">
                         <h2 class="demo-name">A picture of LoRa chip</h2>
                         <p class="demo-desc">LoRaWAN provides a solution for low power, long range, and low bandwidth communication, which is
                             exactly what we need for our application.
                         </p>
                     </div>
-                    <div class="demo-frame">
+                    <div class="demo-frame text-center">
                         <img src="res/proto2.jpg" class="img-fluid rounded demo-pic">
                         <h2 class="demo-name">The second prototype as a transceiver</h2>
                         <p class="demo-desc">Another Arduino that collects data before we purchase the LoRa Gateway. LoRa Gateway will be used
@@ -95,7 +92,7 @@
                             improve our signal range.
                         </p>
                     </div>
-                    <div class="demo-frame">
+                    <div class="demo-frame text-center">
                         <img src="res/pcb.jpg" class="img-fluid rounded demo-pic">
                         <h2 class="demo-name">PCB we have made</h2>
                         <p class="demo-desc">We are trying to build our first beta prototype that can actually be installed on a helmet.
@@ -134,18 +131,18 @@
         <div class="text-center">
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com">
+                        <img src="res/facebook-square.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.instagram.com">
+                        <img src="res/instagram.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.twitter.com">
+                        <img src="res/twitter-square.svg">
                     </a>
                 </li>
             </ul>
