--- a/index.html
+++ b/index.html
@@ -200,18 +200,18 @@
         <div class="text-center">
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com">
+                        <img src="res/facebook-square.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.instagram.com">
+                        <img src="res/instagram.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.twitter.com">
+                        <img src="res/twitter-square.svg">
                     </a>
                 </li>
             </ul>
