--- a/about.html
+++ b/about.html
@@ -12,10 +12,6 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 
@@ -53,7 +49,7 @@
         </div>
     </nav>
     <div id="background-dark" style="margin-top:55px;">
-        <div class="jumbotron">
+        <div class="jumbotron" id="jumbo">
             <p class="lead">Our cause, our belief, and our mission</p>
             <h1 class="display-4">About Brainwatch</h1>
             <hr class="my-4">
@@ -159,22 +155,21 @@
         <!--/.Footer Links-->
 
 
-        <!--Social buttons-->
         <div class="text-center">
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com">
+                        <img src="res/facebook-square.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.instagram.com">
+                        <img src="res/instagram.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.twitter.com">
+                        <img src="res/twitter-square.svg">
                     </a>
                 </li>
             </ul>
