--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,6 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 
@@ -99,18 +95,18 @@
         <div class="text-center">
             <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com">
+                        <img src="res/facebook-square.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.instagram.com">
+                        <img src="res/instagram.svg">
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="btn-floating btn-sm mx-1" href="#">
-                        <i class="fa fa-wifi"></i>
+                    <a class="btn-floating btn-sm mx-1" href="https://www.twitter.com">
+                        <img src="res/twitter-square.svg">
                     </a>
                 </li>
             </ul>
